src/objects/MT_MediaBuildingBlockMonthlyPlan__c.object
<CustomObject>
    <description>Track monthly distribution of the volume of a specific media channel used by a campaign</description>
    <fields>
        <fullName>MT_BMVOverbooking__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BMV Overbooking</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BMVSponsoring__c</fullName>
        <label>BMV Sponsoring</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BMVSpot__c</fullName>
        <label>BMV Spot</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BMVWeightedSpot__c</fullName>
        <formula>MT_Probability__c*MT_BMVSpot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV Weighted Spot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BarterRevenue__c</fullName>
        <formula>MT_TotalBMV__c * MT_MCamp_BarterYield__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barter Revenue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_Effective_AirTimeRate__c</fullName>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_AirTimeRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Air Time Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Effective_BarterYieldQuantifier__c</fullName>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_BarterYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Barter Yield Quantifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_CoverageMarginII__c</fullName>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_CoverageMarginII__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective DeckungsbeitragII</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Effective_EquityYieldQuantifier__c</fullName>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_EquityYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Equity Yield Quantifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_ExitParticipationYieldQuant__c</fullName>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_ExitParticipationYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Exit Participation Yield Quant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_FillUpYieldQuantifier__c</fullName>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_FillUpYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Fill up Yield Quantifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_FixYieldQuantifier__c</fullName>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_FixYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Fix Yield Quantifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_VariableYieldQuantifier__c</fullName>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_VariableYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Variable Yield Quantifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_WKZFactor__c</fullName>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_WKZFactor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective WKZ Faktor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_FixRevenue_Yield__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yield Fix Revenue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_FixRevenue__c</fullName>
        <label>Fix Revenue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_BarterYield__c</fullName>
        <formula>MT_MediaBuildingBlock_ref__r.MT_MediaCampaign_ref__r.MT_BarterYield__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Barter Yield</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_MediaBuildingBlock_ref__c</fullName>
        <label>Media Building Block</label>
        <referenceTo>MT_MediaBuildingBlock__c</referenceTo>
        <relationshipLabel>Media Building Block Monthly Plans</relationshipLabel>
        <relationshipName>MediaBuildingBlockMonthlyPlans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT_MediaCampaignTypeParameterVersion_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Campaign Type Parameter Version</label>
        <referenceTo>MT_CampaignTypeParameterVersion__c</referenceTo>
        <relationshipLabel>Media Building Block Monthly Plans</relationshipLabel>
        <relationshipName>MT_MediaBuildingBlockMonthlyPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_Month__c</fullName>
        <formula>MONTH(MT_PlanningDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_NoOverbookingFlights__c</fullName>
        <label>No of Overbooking Flights</label>
        <summaryFilterItems>
            <field>MT_MediaFlight__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Overbooking</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaFlight__c.MT_MediaBuildingBlockMonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_NoSponsoringFlights__c</fullName>
        <label>No of Sponsoring Flights</label>
        <summaryFilterItems>
            <field>MT_MediaFlight__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sponsoring</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaFlight__c.MT_MediaBuildingBlockMonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_NoSpotFlights__c</fullName>
        <label>No of Spot Flights</label>
        <summaryFilterItems>
            <field>MT_MediaFlight__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Spot</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaFlight__c.MT_MediaBuildingBlockMonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_PlanningDate__c</fullName>
        <label>Planning Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_Probability__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Probability</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_ROI_Revenue__c</fullName>
        <formula>MT_TotalBMV__c *  MT_Effective_WKZFactor__c *  MT_ROI_Yield__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI_Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_ROI_Yield__c</fullName>
        <label>ROI Yield %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_SumBMV__c</fullName>
        <description>Cumulative sum of the BMV of broadcast data</description>
        <label>Sum of BMV</label>
        <summarizedField>MT_MediaBroadcastData__c.MT_BMV__c</summarizedField>
        <summaryForeignKey>MT_MediaBroadcastData__c.MT_MonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_SumOverbookingBMV__c</fullName>
        <label>Sum Overbooking BMV</label>
        <summarizedField>MT_MediaBroadcastData__c.MT_BMV__c</summarizedField>
        <summaryFilterItems>
            <field>MT_MediaBroadcastData__c.MT_BroadcastType__c</field>
            <operation>equals</operation>
            <value>Overbooking Order</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaBroadcastData__c.MT_MonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_SumSponsoringBMV__c</fullName>
        <label>Sum Sponsoring BMV</label>
        <summarizedField>MT_MediaBroadcastData__c.MT_BMV__c</summarizedField>
        <summaryFilterItems>
            <field>MT_MediaBroadcastData__c.MT_BroadcastType__c</field>
            <operation>equals</operation>
            <value>Sponsoring Order</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaBroadcastData__c.MT_MonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_SumSpotBMV__c</fullName>
        <label>Sum Spot BMV</label>
        <summarizedField>MT_MediaBroadcastData__c.MT_BMV__c</summarizedField>
        <summaryFilterItems>
            <field>MT_MediaBroadcastData__c.MT_BroadcastType__c</field>
            <operation>equals</operation>
            <value>Spot Order</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaBroadcastData__c.MT_MonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_TotalBMV__c</fullName>
        <formula>MT_BMVSponsoring__c + MT_BMVSpot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total BMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_TotalRevenue__c</fullName>
        <formula>MT_FixRevenue__c + MT_VariableRevenue1_TotalRevenue__c + MT_VariableRevenue2_TotalRevenue__c + MT_VariableRevenue3_TotalRevenue__c + MT_VariableRevenue4_TotalRevenue__c + MT_VariableRevenue5_TotalRevenue__c + MT_BarterRevenue__c
/* @TODO Add missing revenue fields */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_TotalYield__c</fullName>
        <formula>MT_TotalRevenue__c /  MT_TotalBMV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_SoldAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Var. Umsatz 1 - Verkaufte Einheiten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_TotalRevenue__c</fullName>
        <formula>MT_VariableRevenue1_SoldAmount__c * MT_MediaBuildingBlock_ref__r.MT_MediaCampaign_ref__r.MT_VariableRevenue1_RevenuePerUnit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 1 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_Yield__c</fullName>
        <formula>MT_VariableRevenue1_TotalRevenue__c / MT_TotalBMV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield Variabler Umsatz 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_SoldAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Var. Umsatz 2 - Verkaufte Einheiten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_TotalRevenue__c</fullName>
        <formula>MT_VariableRevenue2_SoldAmount__c * MT_MediaBuildingBlock_ref__r.MT_MediaCampaign_ref__r.MT_VariableRevenue2_RevenuePerUnit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 2 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_Yield__c</fullName>
        <formula>MT_VariableRevenue2_TotalRevenue__c / MT_TotalBMV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield Variabler Umsatz 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_SoldAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Var. Umsatz 3 - Verkaufte Einheiten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_TotalRevenue__c</fullName>
        <formula>MT_VariableRevenue3_SoldAmount__c * MT_MediaBuildingBlock_ref__r.MT_MediaCampaign_ref__r.MT_VariableRevenue3_RevenuePerUnit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 3 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_Yield__c</fullName>
        <formula>MT_VariableRevenue3_TotalRevenue__c / MT_TotalBMV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield Variabler Umsatz 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Year__c</fullName>
        <formula>YEAR(MT_PlanningDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media Building Block Monthly Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MBBMPL{00000}</displayFormat>
        <label>Media Building Block Monthly Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Building Block Monthly Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MT_BMV_Sponsoring_MUST_BE_POSITIVE</fullName>
        <active>true</active>
        <errorConditionFormula>MT_BMVSponsoring__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_BMVSponsoring__c</errorDisplayField>
        <errorMessage>BMV Sponsoring cannot be less then 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_BMW_Spot_MUST_BE_POSSITIVE</fullName>
        <active>true</active>
        <errorConditionFormula>MT_BMVSpot__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_BMVSpot__c</errorDisplayField>
        <errorMessage>BMV Spot cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_FIX_Revenue_MUST_BE_POSITIVE</fullName>
        <active>true</active>
        <errorConditionFormula>MT_FixRevenue__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_FixRevenue__c</errorDisplayField>
        <errorMessage>Fix Revenue cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_IsMonthInContractRuntime</fullName>
        <active>true</active>
        <description>Determines if the Month is in between the Start and End Date of this Contract (defined on the opportunity approval)</description>
        <errorConditionFormula>OR(
  DATE(YEAR(MT_MediaBuildingBlock_ref__r.MT_MediaCampaign_ref__r.MT_Sys_ContractOrTVRuntimeStart__c),MONTH(MT_MediaBuildingBlock_ref__r.MT_MediaCampaign_ref__r.MT_Sys_ContractOrTVRuntimeStart__c),1) &gt; DATE(YEAR(MT_PlanningDate__c),MONTH(MT_PlanningDate__c),1),
  DATE(YEAR(MT_MediaBuildingBlock_ref__r.MT_MediaCampaign_ref__r.MT_Sys_ContractOrTVRuntimeEnd__c),MONTH(MT_MediaBuildingBlock_ref__r.MT_MediaCampaign_ref__r.MT_Sys_ContractOrTVRuntimeEnd__c),1) &lt; DATE(YEAR(MT_PlanningDate__c),MONTH(MT_PlanningDate__c),1)
)</errorConditionFormula>
        <errorDisplayField>MT_PlanningDate__c</errorDisplayField>
        <errorMessage>Der Monat befindet sich außerhalb des Vertragszeitraumes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_Monthly_OverbookingFlights_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>MT_NoOverbookingFlights__c &gt; 5</errorConditionFormula>
        <errorMessage>Only 5 Overbooking Flights can be created per month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_Monthly_Probability_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>MT_Probability__c &lt; 0 || MT_Probability__c &gt; 1</errorConditionFormula>
        <errorDisplayField>MT_Probability__c</errorDisplayField>
        <errorMessage>Value must be between 0% and 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_Monthly_ROIYield_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>MT_ROI_Yield__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_ROI_Yield__c</errorDisplayField>
        <errorMessage>Value cannot be lower than 0%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_Monthly_SponsoringFlights_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>MT_NoSponsoringFlights__c &gt; 20</errorConditionFormula>
        <errorMessage>Only 20 Sponsoring Flights can be created per month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_Monthly_SpotFlights_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>MT_NoSpotFlights__c &gt; 5</errorConditionFormula>
        <errorMessage>Only 5 Spot Flights can be created per month</errorMessage>
    </validationRules>
</CustomObject>